--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,33 +1,25 @@
 languages:
-  - item: JavaScript (ES6)
-  - item: TypeScript
-  - item: HTML
-  - item: CSS/Sass
+  - item: Embedded C
+  - item: C ++
   - item: Python
-  - item: SQL
-  - item: R
+  
 
-frameworks:
-  - item: Ember & Glimmer
-  - item: React
-  - item: Jekyll
-  - item: Node
-  - item: D3
-  - item: Wordpress
-  - item: Timber
+#frameworks:
+# - item: Ember & Glimmer
+# - item: React
+ # - item: Jekyll
+#  - item: Node
+#  - item: D3
+ # - item: Wordpress
+#  - item: Timber  
 
 tools:
-  - item: Bash
   - item: Git & Github
-  - item: Gulp & Grunt
-  - item: Chrome DevTools
-  - item: Postman
-  - item: MongoDB
+  - item: Linux
+  - item: Cross-toolchain
+  
 
 design:
-  - item: Sketch
-  - item: InDesign
-  - item: InVision
-  - item: Prototyping
-  - item: Wireframing
-  - item: User Testing
+  - item: PCB designing
+  - item: Tkinter
+  
