--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,37 +1,36 @@
-- name: Surf Videos
-  url: https://github.com/bchiang7/Surf-Videos
-  code: https://github.com/bchiang7/Surf-Videos
-  description: Small React project created during an interview process to browse and search surf videos via the YouTube API.
+- name: Vehicle Speed Detection Using IOT
+  url: https://github.com/gov466/Capstone-project
+  code: https://github.com/gov466/Capstone-project
+  description: Capstone project done during final semester of my two year post graduate diploma in embedded system engineering design course.
   used:
-    - thing: JavaScript
-    - thing: React
-    - thing: React Router
-    - thing: Axios
-    - thing: YouTube API
+    - thing: Embedded C
+   # - thing: 
+    #- thing: 
+    #- thing: 
+    #- thing: 
 
-#- name: Halcyon Theme
- # url: https://bchiang7.github.io/halcyon-site/
- # code: https://github.com/bchiang7/halcyon-site
- # description: A minimal, dark theme for Sublime Text, Atom, VS Code, and more published to <a class="underline-link" href="https://packagecontrol.io/packages/Halcyon%20Theme">Package Control</a>, <a class="underline-link" href="https://atom.io/themes/halcyon-syntax">Atom Package Manager</a>, <a class="underline-link" href="https://marketplace.visualstudio.com/items?itemName=brittanychiang.halcyon-vscode">Visual Studio Marketplace</a>, and <a class="underline-link" href="https://www.npmjs.com/package/hyper-halcyon-theme">NPM</a>.
- # used:
-  #  - thing: Gatsby
-  #  - thing: Sublime Text
-  #  - thing: Atom
-  #  - thing: VS Code
-  #  - thing: iTerm2
-  #  - thing: Hyper
-
-- name: Lonely Planet DBMS
-  url: https://github.com/bchiang7/CS3200-Project
-  code: https://github.com/bchiang7/CS3200-Project
-  description: Final project for my Database Design course at Northeastern. A simple web application that allows users to filter through a database containing Lonely Planet's <a class="underline-link" href="https://www.amazon.com/Lonely-Planets-Ultimate-Travel-Places/dp/1760342777" target="_blank">Top 500 Travel Destinations</a>. Users are able to add themselves as visitors as well as leave reviews of the destinations.
+- name: Adaptive method for hand gesture recoginition
+  url: https://github.com/gov466/gov466.github.io/blob/master/govind%20report1(1).pdf
+  code: https://github.com/gov466/gov466.github.io/blob/master/govind%20report1(1).pdf
+  description: A vision based hand gesture recognition system, the technology used bare hand to extract data for recognition. With the help of this technology user can directly interact with the system.
   used:
-    - thing: Python
-    - thing: MySQL
-    - thing: Flask
-    - thing: HTML
-    - thing: CSS
-    - thing: JavaScript
+   - thing: MPLAB ide
+   - thing: MATLAB
+  # - thing: Atom
+  # - thing: VS Code
+  # - thing: iTerm2
+  # - thing: Hyper
+
+- name: Gesture based driving system
+  url: https://github.com/gov466/gov466.github.io/blob/master/gstr%20based%20drivng%20ppt(1).pdf
+  code: https://github.com/gov466/gov466.github.io/blob/master/gstr%20based%20drivng%20ppt(1).pdf
+  description: Mini project for my electronics and communication course at Mahatma gandhi university. Developed an accelerometer based gesture controlled driving system with PIC16F877A microcontroller.
+    - thing: MPLAB ide
+    #- thing: MySQL
+    #- thing: Flask
+    #- thing: HTML
+    #- thing: CSS
+    #- thing: JavaScript
 
 - name: myNEU Redesign
   url: https://bchiang7.github.io/Redesign-myNEU/
