--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,4 +1,4 @@
-- name: Vehicle Speed Detection Using IOThttps://github.com/gov466/gov466.github.io/security
+- name: Vehicle Speed Detection Using IOT
   url: https://github.com/gov466/Capstone-project
   code: https://github.com/gov466/Capstone-project
   description: Capstone project done during final semester of my two year post graduate diploma in embedded system engineering design course.
