--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -12,7 +12,7 @@ social:
   - title: email
     url: mailto:govind.mndy@gmail.com
   - title: twitter
-    url: https://twitter.com/Govindraj3s
+    url: https://twitter.com/Govindraj3
   - title: instagram
     url: https://instagram.com/Govindraj7809
   - title: youtube
