--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 - company: Gardaworld security services
   url: https://www.garda.com/
   time: Jan 2020 - Present
-  position: Security
+  position: Part time Security
 
 - company: Wipro technologies
   url: https://www.wipro.com/en-CA/contact-wipro/
