--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -15,6 +15,10 @@ tools:
   - item: Linux
   - item: Cross-toolchain
   - item: EasyEDA
+  - item: Selenium
+  - item: TestNG
+  
+  
  
 Cloud:
   - item: Thingspeak
