--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,13 +1,13 @@
+- company: Crystal Fountains Inc
+  url: https://crystalfountains.com/
+  time: Nov 2021 - Present
+  position: Software/Hardware Quality Technician
+
 - company: Advanced Skyline Technologies Ltd
   url: http://www.astsys.com/home/#
-  time: Mar 2021 - Present
+  time: Mar 2021 - Nov 2021
   position: Hardware tester
   
-- company: Gardaworld security services
-  url: https://www.garda.com/
-  time: Jan 2020 - Present
-  position: Part time Security
-
 - company: Wipro technologies
   url: https://www.wipro.com/en-CA/contact-wipro/
   time: Dec 2018 - Nov 2019
